--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -55,7 +55,7 @@ input {
     background: none;
     outline: none;
     text-align: center;
-    width: 100px;
+    width: 120px; /* Увеличим ширину для мобильных */
     font-size: 16px;
     font-family: Arial, sans-serif;
 }
